--- a/bouncy_castle/defaults/main.yml
+++ b/bouncy_castle/defaults/main.yml
@@ -5,7 +5,7 @@ java_home: "/tmp/jdk"
 user: "oracle"
 group: "oracle"
 jdk_version_jar: "jdk18on"
-repository_server: "vps-spr-gitlab.sanidad.msc"
+repository_server: "myHTTPRepoServer"
 repository_server_download_url: "http://{{repository_server}}:8080/java/bouncy_castle/latest/"
 bc_download_url: "https://www.bouncycastle.org/download"
 download_url: "{{ repository_server_download_url if download_method=='repository' else bc_download_url }}"
