--- a/fmw_infra/defaults/main.yml
+++ b/fmw_infra/defaults/main.yml
@@ -10,6 +10,6 @@ install_type: "Fusion Middleware Infrastructure"
 user: "oracle"
 group: "oracle"
 fmw_version: "12.2.1.4.0"
-repository_server: "vps-spr-gitlab.sanidad.msc"
+repository_server: "myRemoteHost"
 repository_server_port: "8080"
 download_url: "http://{{repository_server}}:{{repository_server_port}}/oracle/fmw/binaries/{{fmw_version}}/fmw_{{fmw_version}}_infrastructure.jar"
